--- a/iac/lesson2/project/udagram-iac/servers/stack.yml
+++ b/iac/lesson2/project/udagram-iac/servers/stack.yml
@@ -1,30 +1,16 @@
-AWSTemplateFormatVersion: 2010-09-09
-
 Parameters:
   EnvironmentName:
     Description: An environment that will be prefixed to resources
     Type: String
   
-  Environment:
-    Description: Environment name, used as a prefix for resources
-    Type: String
-
-  Project:
-    Description: Project name, used for resources tagging
-    Type: String
-
   WebServerImageId:
     Description: Web serve image id
     Type: String
-    Default: ami-00a54827eb7ffcd3c # Ubuntu Server 18.04 LTS
+    Default: ami-00a54827eb7ffcd3c
 
-  WebServerInstanceType:
-    AllowedValues:
-      - t2.nano
-    ConstraintDescription: Web server instance type. t2.nano - dev instance, t3.medium - default
-    Default: t3.medium
-    Description: WebServer EC2 instance type
-    Type: String
+  AMItoUse:
+      Description: AMI to use for our base image
+      Type: String
   
   WebServerVolumeSize:
     Description: Disk volume size for WebServer
@@ -77,7 +63,9 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Load Balancer Sec. Group
-      VpcId: !Ref VPC
+      VpcId:
+        Fn::ImportValue:
+          !Sub "${EnvironmentName}-VPCID"
       SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 80
@@ -93,7 +81,9 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Web Server Sec. Group
-      VpcId: !Ref VPC
+      VpcId:
+        Fn::ImportValue:
+          !Sub "${EnvironmentName}-VPCID"
       SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 80
@@ -122,13 +112,13 @@ Resources:
           cd /var/www/html
           aws s3 cp s3://udacity-demo-1/udacity.zip .
           unzip -o udacity.zip
-      ImageId: !Ref WebServerImaged
+      ImageId: !Ref AMItoUse
       IamInstanceProfile: !Ref ProfileWithRolesForApp
       SecurityGroups:
       - !Ref WebServerSecGroup
-      InstanceType: !Ref WebServerInstanceType
+      InstanceType: t2.micro
       BlockDeviceMappings:
-      - DeviceName: "/dev/sdk"
+      - DeviceName: /dev/sdk
         Ebs:
           VolumeSize: '10'
   
@@ -152,7 +142,7 @@ Resources:
     Properties:
       VPCZoneIdentifier:
       - Fn::ImportValue:
-          !Sub ${EnvironmentName}-PrivateSubnetIDs
+          !Sub "${EnvironmentName}-PrivateSubnetIDs"
       LaunchConfigurationName: !Ref WebAppLaunchConfig
       MinSize: '2'
       MaxSize: '4'
@@ -163,8 +153,8 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
       Subnets:
-      - Fn::ImportValue: !Sub ${EnvironmentName}-PB1
-      - Fn::ImportValue: !Sub ${EnvironmentName}-PB2
+      - Fn::ImportValue: !Sub ${EnvironmentName}-PublicSubnet1ID
+      - Fn::ImportValue: !Sub ${EnvironmentName}-PublicSubnet2ID
       SecurityGroups:
         - !Ref LBSecGroup
   
@@ -173,7 +163,7 @@ Resources:
     Properties:
       DefaultActions:
         - Type: forward
-        TargetGroupArn: !Ref WebAppTargetGroup
+          TargetGroupArn: !Ref WebAppTargetGroup
       LoadBalancerArn: !Ref WebAppLB
       Port: '80'
       Protocol: HTTP
