--- a/iac/lesson2/project/udagram-iac/servers.yml
+++ b/iac/lesson2/project/udagram-iac/servers.yml
@@ -106,7 +106,7 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           apt-get update -y
-          apt-get install awscli -y
+          apt-get install unzip awscli -y
           apt-get install apache2 -y
           systemctl start apache2.service
           cd /var/www/html
